--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
+    "isomorphic-dompurify": "^2.30.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
